--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,20 +3,31 @@
         "browser": true,
         "es2021": true
     },
+    "root": true,
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "prettier",
+        "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaFeatures" : {
+            "jsx" : true
+        }
     },
     "plugins": [
         "@typescript-eslint",
-        "react"
+        "react",
+        "prettier"
     ],
     "rules": {
+        "prettier/prettier": "error",
+        "no-duplicate-imports" : "error",
+        "no-self-compare" : "error",
+        "no-use-before-define" : "error"
     }
 }
