--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,29 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "root": true,
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended",
-        "prettier",
-        "plugin:prettier/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "ecmaFeatures" : {
-            "jsx" : true
-        }
-    },
-    "plugins": [
-        "@typescript-eslint",
-        "react",
-        "prettier"
-    ],
-    "rules": {
-        "prettier/prettier": "error",
-        "no-duplicate-imports" : "error",
-        "no-self-compare" : "error",
-        "no-use-before-define" : "error"
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "root": true,
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier",
+    "plugin:prettier/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
     }
+  },
+  "plugins": ["@typescript-eslint", "prettier"],
+
+  "rules": {
+    "prettier/prettier": "error",
+    "no-duplicate-imports": "error",
+    "no-self-compare": "error",
+    "no-use-before-define": "error"
+  }
 }
