--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,20 +1,9 @@
-{ 
-    "extends": [
-        "stylelint-config-standard"
-      ],
-      "plugins": [
-        "stylelint-order",
-        "stylelint-prettier"
-      ],
-      "rules": {
-        "order/order": [
-          "custom-properties",
-          "declarations"
-        ],
-        "order/properties-order": [
-          "width",
-          "height"
-        ],
-        "prettier/prettier": true
-      }
+{
+  "extends": ["stylelint-config-standard"],
+  "plugins": ["stylelint-order", "stylelint-prettier"],
+  "rules": {
+    "order/order": ["custom-properties", "declarations"],
+    "order/properties-order": ["width", "height"],
+    "prettier/prettier": true
+  }
 }
