--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,6 +46,7 @@
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-order": "^6.0.3",
-    "stylelint-prettier": "^4.0.2"
+    "stylelint-prettier": "^4.0.2",
+    "typescript": "^5.2.2"
   }
 }
