--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
   "devDependencies": {
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "3.0.3",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^4.0.2",
-    "typescript": "^5.2.2"
+    "typescript": "^4.9.5"
   }
 }
