--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
     "@types/react-redux": "^7.1.33",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
